fixed protected route bug: nameless HOC component create loop if use morethan 1 useEffect in App.js

--- a/todo.txt
+++ b/todo.txt
@@ -20,4 +20,4 @@ backend:
 	. delete old image before upload new one
 
 frontend:
-	. protected routes not working properly
+	. Logout throw error protectedRoute
